* fix #637 : `file sync down` didn't work
* #613 : Create sheet command for Google Sheets