@@ -10,17 +10,19 @@ import (
 
 type Today struct {
 	rc_recipe.RemarkTransient
-	Utc bool
+	Utc    bool
+	Offset int
 }
 
 func (z *Today) Preset() {
 }
 
 func (z *Today) Exec(c app_control.Control) error {
+	t := time.Now().Add(time.Duration(z.Offset) * time.Hour * 24)
 	if z.Utc {
-		ui_out.TextOut(c, time.Now().UTC().Format("2006-01-02"))
+		ui_out.TextOut(c, t.UTC().Format("2006-01-02"))
 	} else {
-		ui_out.TextOut(c, time.Now().Format("2006-01-02"))
+		ui_out.TextOut(c, t.Format("2006-01-02"))
 	}
 	return nil
 }
