@@ -2995,8 +2995,13 @@
   "recipe.util.database.query.title": "Query SQLite3 database",
   "recipe.util.database.title": "Database commands",
   "recipe.util.date.title": "Date commands",
+  "recipe.util.date.today.flag.offset": "Offset (day)",
   "recipe.util.date.today.flag.utc": "Use UTC",
   "recipe.util.date.today.title": "Display current date",
+  "recipe.util.datetime.now.flag.offset_day": "Offset (day)",
+  "recipe.util.datetime.now.flag.offset_hour": "Offset (hour)",
+  "recipe.util.datetime.now.flag.offset_min": "Offset (min)",
+  "recipe.util.datetime.now.flag.offset_sec": "Offset (sec)",
   "recipe.util.datetime.now.flag.utc": "Use UTC",
   "recipe.util.datetime.now.title": "Display current date/time",
   "recipe.util.datetime.title": "Date/time commands",
